# CaSkade-Planner

./: .gitignore  .gitmodules  Dockerfile  README.md  cask_to_smt.py  debug_solution_exclusion.py  entrypoint.sh  ex.ttl  ex_merged.ttl  ex_three_caps.ttl  ex_two_caps.ttl  limited_test.py  new_order_ontology.ttl  ontology.ttl  order_ontology.ttl  plan.json  pyproject.toml  quick_debug.py  requirements.txt  test_multiple_solutions.py
smt-planning/: SparqlQueries.py  bool_variable_support.py  capability_constraints.py  capability_effects.py  capability_mutexes.py  capability_preconditions.py  cask_to_smt.py  constraints_bools.py  constraints_real_variables.py  goal.py  init.py  property_links.py  real_variable_constraints.py  real_variable_contin_change.py  variable_constraints.py  variable_declaration.py
smt_planning/: StateHandler.py  __init__.py  bool_variable_support.py  capability_constraints.py  capability_effects.py  capability_links.py  capability_preconditions.py  cask_to_smt.py  constraints_bools.py  constraints_real_variables.py  goal.py  planner-rest.py  planner_cli.py  planner_rest.py  planning_result.py  property_links.py  real_variable_contin_change.py
tests/: ex_three_caps.ttl  ex_two_caps.ttl  riva_logistics_without_gozone.ttl  riva_one_drone_with_gf_and_current_holder.ttl  riva_one_rover.ttl  riva_one_rover_with_gf.ttl  riva_one_rover_with_gf_and_current_holder.ttl  riva_one_rover_with_gf_fail_item_goal.ttl  riva_one_rover_with_gf_fail_item_start.ttl  riva_two_drones.ttl  riva_two_rover_with_gf.ttl  riva_two_rover_with_gf_and_current_holder.ttl  (+8 more)
(+78 files in other folders)
